@@ -1,10 +1,14 @@
 # Run all the examples and clean up after them
-all: simple_tess simple_prism
+all: simple_tess simple_prism prism_flat_tess
+
+prism_flat_tess:
+	bash prism_flat_tess.sh
 
 simple_tess:
 	bash simple_tess.sh
-	rm output.txt model.txt
 	
 simple_prism:
 	bash simple_prism.sh
+
+clean:
 	rm output.txt model.txt
